# Django-Stripe

./: .env.dist  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
core/: settings.py  urls.py
items/: admin.py  models.py  urls.py  views.py
orders/: services.py  urls.py  views.py
templates/: base.html
templates/items/: item_detail.html  items.html
templates/orders/: payment_canceled.html  success_payment.html
